(chores) camel-core: test cleanups - simplify stream calls - removed unused imports - inline variables - use List.of when possible for arrays with single entries - use chained StringBuffer/StringBuilder calls instead of concatenations - replace redundant pullAll calls - replace instantiation with direct class access - use bulk operations when possible - simplify pointless arithmetic expression - use static inner classes when possible - removed redundant suppressions