@@ -86,7 +86,7 @@ public class ThrottlingExceptionRoutePolicyHalfOpenHandlerTest extends ContextTe
 
         result.reset();
         result.expectedMessageCount(1);
-        bodies = Arrays.asList("Message Four");
+        bodies = List.of("Message Four");
         result.expectedBodiesReceivedInAnyOrder(bodies);
 
         // wait long enough to have the consumer resumed
@@ -117,7 +117,7 @@ public class ThrottlingExceptionRoutePolicyHalfOpenHandlerTest extends ContextTe
         };
     }
 
-    public class AlwaysCloseHandler implements ThrottlingExceptionHalfOpenHandler {
+    public static class AlwaysCloseHandler implements ThrottlingExceptionHalfOpenHandler {
 
         @Override
         public boolean isReadyToBeClosed() {
